# lgames2

barrage/: ChangeLog  Makefile.am  Makefile.in  README  barrage.desktop  barrage.desktop.in  barrage.spec  config.h.in  configure  configure.ac  configure.in
barrage/m4/: ChangeLog
barrage/src/: Makefile.am  Makefile.in  SFont.c  chart.c  data.c  defs.h  main.c
barrage/src/gfx/: Makefile.in
barrage/src/sounds/: Makefile.am  Makefile.in
jwt/: changelog.txt  dialog.js  jwt.js  makedist.sh  pali.htm  readme.txt  style.css
jwt/pali/: gair.js  lang.js  miscellaneous.js  pali2010.js
lbreakout2/: CROSSCOMPILE  ChangeLog  Makefile.am  configure.in
lbreakout2/client/: chart.c  chart.h  client_data.c  client_handlers.c  comm.c  config.c  extras.c  game.c  main.c  manager.c  setselect.c
lbreakout2/client/levels/: Astra  BrownBricks  EastEurope  Football  Germany  Makefile.am  Makefile.in  Memory2  WestEurope
lbreakout2/common/: messages.h  net.c  net.h
lbreakout2/game/: bricks.c  extras.c  game.c  game.h  gamedefs.h  levels.c  levels.h
lbreakout2/gui/: stk.c
lbreakout2/po/: LINGUAS  da.po  de.po  fr.po  lbreakout2.pot  pt.po  tr.po
lbreakout2/server/: server.c  server.h
lbreakouthd/: CROSSCOMPILE  Changelog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  lbreakouthd.desktop.in
lbreakouthd/libgame/: Makefile.in  balls.c  bricks.c  bricks.h  extras.c  game.c  gamedefs.h  levels.c  list.c  list.h  paddle.c
lbreakouthd/po/: ChangeLog  POTFILES.in  de.gmo  de.po  fr.po  lbreakouthd.pot  sv.po
lbreakouthd/src/: Makefile.am  Makefile.in  clientgame.cpp  clientgame.h  config.cpp  config.h  hiscores.cpp  main.cpp  menu.cpp  menu.h  mixer.h  sdl.cpp  sdl.h  selectdlg.cpp  selectdlg.h  sprite.cpp  sprite.h  theme.cpp  theme.h  tools.cpp  tools.h  view.cpp  view.h
lbreakouthd/src/levels/: LBreakoutHD  Makefile  Makefile.am  Makefile.in  Test
lbreakouthd/src/themes/: Makefile.in
lbreakouthd/src/themes/Standard/: CREDITS  Makefile.am  Makefile.in  theme.ini
lmarbles/: ChangeLog  Makefile.am  aclocal.m4  config.h.in  configure.in
lmarbles/intl/: Makefile
lmarbles/m4/: Makefile  Makefile.in
lmarbles/po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  de.gmo  de.po  fr.po  lmarbles.pot
lmarbles/src/: Makefile.am  cfg.c  cfg.h  game.c  levels.c  main.c  menu.c  profile.c
lpairs/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  lpairs.desktop  lpairs.lsm  lpairs.spec
lpairs/lpairs/: Makefile.am  Makefile.in  cfg.c  cfg.h  dynlist.c  dynlist.h  main.c  menu.c  menu.h  pairs.c  pairs.h  sdl.c  sdl.h  sndsrv.c  sndsrv.h
lpairs/m4/: Makefile.in
lpairs/po/: POTFILES.in  de.gmo  de.po  lpairs.pot
lpairs2/: CROSSCOMPILE  ChangeLog  Makefile.am  README  TODO  config.h.in  config.status  configure.ac  lpairs2.desktop.in
lpairs2/m4/: ChangeLog
lpairs2/po/: ChangeLog  POTFILES  POTFILES.in  lpairs2.pot
lpairs2/src/: Makefile.am  config.cpp  config.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  sprite.cpp  sprite.h  theme.cpp  theme.h  tools.cpp  tools.h  view.cpp  view.h
lpairs2/src/themes/Standard/: CREDITS  Makefile.am
lpairs2/src/themes/Standard/backgrounds/: Makefile  Makefile.am
lpairs2/src/themes/Standard/motifs/: Makefile  Makefile.am
ltris/: CROSSCOMPILE  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure.ac  configure.in  ltris.appdata.xml
ltris/icons/: Makefile.in
ltris/m4/: Makefile.in
ltris/po/: de.po  fr.po  it.po  ltris.pot  pt.po  sv.po  tr.po
ltris/src/: Makefile.am  Makefile.in  bowl.c  bowl.h  chart.c  config.c  config.h  cpu.c  ltris.h  main.c  manager.c  parser.c  sdl.c  sdl.h  shrapnells.c  tetris.c  tools.c  tools.h  value.c
ltris/src/gfx/: CREDITS  Makefile.am  Makefile.in
ltris/src/sounds/: Makefile.in
occ/: Changelog  README  TODO  board.js  board.php  browser.js  chess.php  help.php  index.php  io.php  logout.php  makedist  misc.php  newgame.php  pgnformat.php  rankings.php  rating.php  render.php  search.php  sendpwd.php  session.php  verifysession.php
occ/images/beholder/: credits.php  style.css
occ/images/default/: credits.php  style.css
occ/occ-data/users/: accounts.php
