####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = intl m4 po lpairs 

EXTRA_DIST = config.rpath  AUTHORS COPYING ChangeLog INSTALL README TODO lpairs.lsm ABOUT-NLS lpairs.spec lpairs.desktop lpairs.png

####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I m4
