dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

AC_CANONICAL_TARGET

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(lpairs,1.0.4)

dnl Checks for programs.
AM_GNU_GETTEXT
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.
AC_CHECK_LIB(m, main,, AC_MSG_ERROR(lib math is needed))

dnl check SDL version
AM_PATH_SDL(1.0.0,, AC_MSG_ERROR(lib SDL is needed))
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"
AM_PATH_SDL(1.1.5, CFLAGS="$CFLAGS -DSDL_1_1_5",)

dnl check sound
sound_flag="-DSOUND"
AC_ARG_ENABLE( sound,
[  --disable-sound         Disables sound], sound_flag="")
AC_SUBST(sound_flag)

dnl set localedir
localedir=$datadir/locale
locdir_flag="-DLOCALEDIR=\\\"$localedir\\\""

dnl installation path
inst_dir=$datadir/games/lpairs
inst_flag="-DSRC_DIR=\\\"$inst_dir/\\\""

AC_ARG_ENABLE( install,
[  --disable-install       No installation. Played from the source directory.], 
inst_dir=. inst_flag="-DSRC_DIR=\\\"./\\\"" 
locdir_flag="-DLOCALEDIR=\\\"../dict\\\"" 
    rm -rf dict; mkdir dict
    for lang in `cat po/LINGUAS`; do
        mkdir dict/$lang; mkdir dict/$lang/LC_MESSAGES
        ln -s ../../../po/$lang.gmo dict/$lang/LC_MESSAGES/$PACKAGE.mo
    done
)

AC_SUBST(inst_flag)
AC_SUBST(inst_dir)
AC_SUBST(locdir_flag)

AC_OUTPUT(Makefile lpairs/Makefile intl/Makefile po/Makefile.in m4/Makefile )
